index.html fixed round 1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<h1>Design Principles to Govern Electrode Fabrication for the Lithium Trivanadate Cathode<h1>
+<h1>Design Principles to Govern Electrode Fabrication for the Lithium Trivanadate Cathode</h1>
 
+<body>
 Simulation results and code used for analysis and interactive plotting.
 Accompanies paper <a href="https://iopscience.iop.org/article/10.1149/1945-7111/ab91c8">Design Principles to Govern Electrode Fabrication for the Lithium Trivanadate Cathode</a>
 
 <a href="https://github.com/karthikmayil/LVO-Electrode-Design/LVO_Electrode_Design_Tool.html">Click here for tool</a>
+</body>
